{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 9,
  "lineage": "ed526d59-0c23-de69-70d6-f00ee30ca7af",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:130813399240:vpc/vpc-0ecf0af36da94267c",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0ab6629fcf3702b62",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0fb6a17bfc6689d2c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ecf0af36da94267c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fa1773ce1a771150",
            "owner_id": "130813399240",
            "tags": {
              "Name": "default"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kube-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:130813399240:instance/i-07de7bbd3d56b3368",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "petclinic-master-server-profile",
            "id": "i-07de7bbd3d56b3368",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "A2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00db997d65978fd2d",
            "private_dns": "ip-172-31-200-65.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.200.65",
            "public_dns": "ec2-34-228-25-168.compute-1.amazonaws.com",
            "public_ip": "34.228.25.168",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05d2bc001839f0945",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "petclinic-k8s-master-sec-group",
              "petclinic-k8s-mutual-sec-group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c4dc28b7b2509b49",
            "tags": {
              "Id": "1",
              "Name": "kube-master",
              "Project": "tera-kube-ans",
              "Role": "master",
              "environment": "dev"
            },
            "tags_all": {
              "Id": "1",
              "Name": "kube-master",
              "Project": "tera-kube-ans",
              "Role": "master",
              "environment": "dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-091aefaa2045d1e86",
              "sg-09d900006a03522ce"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.petclinic-master-server-profile",
            "aws_iam_role.petclinic-master-server-s3-role",
            "aws_security_group.petclinic-kube-master-sg",
            "aws_security_group.petclinic-mutual-sg",
            "data.aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:130813399240:instance/i-03ddfae595fa8e9ae",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03ddfae595fa8e9ae",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "A2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-015d81bc99603042a",
            "private_dns": "ip-172-31-200-135.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.200.135",
            "public_dns": "ec2-54-196-237-22.compute-1.amazonaws.com",
            "public_ip": "54.196.237.22",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07b2d64c7f26d4234",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "petclinic-k8s-mutual-sec-group",
              "petclinic-k8s-worker-sec-group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c4dc28b7b2509b49",
            "tags": {
              "Id": "1",
              "Name": "worker-1",
              "Project": "tera-kube-ans",
              "Role": "worker",
              "environment": "dev"
            },
            "tags_all": {
              "Id": "1",
              "Name": "worker-1",
              "Project": "tera-kube-ans",
              "Role": "worker",
              "environment": "dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-017817c8bf3fc8967",
              "sg-09d900006a03522ce"
            ]
          },
          "dependencies": [
            "aws_security_group.petclinic-kube-worker-sg",
            "aws_security_group.petclinic-mutual-sg",
            "data.aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:130813399240:instance/i-0513bed1ba31c30fd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0513bed1ba31c30fd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "A2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0976f95193cb69121",
            "private_dns": "ip-172-31-200-93.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.200.93",
            "public_dns": "ec2-54-160-200-101.compute-1.amazonaws.com",
            "public_ip": "54.160.200.101",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05f944c0effec4df2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "petclinic-k8s-mutual-sec-group",
              "petclinic-k8s-worker-sec-group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c4dc28b7b2509b49",
            "tags": {
              "Id": "2",
              "Name": "worker-2",
              "Project": "tera-kube-ans",
              "Role": "worker",
              "environment": "dev"
            },
            "tags_all": {
              "Id": "2",
              "Name": "worker-2",
              "Project": "tera-kube-ans",
              "Role": "worker",
              "environment": "dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-017817c8bf3fc8967",
              "sg-09d900006a03522ce"
            ]
          },
          "dependencies": [
            "aws_security_group.petclinic-kube-worker-sg",
            "aws_security_group.petclinic-mutual-sg",
            "data.aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "petclinic-kube-master-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:130813399240:security-group/sg-091aefaa2045d1e86",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-091aefaa2045d1e86",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 10257,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 10257
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 10259,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 10259
              }
            ],
            "name": "petclinic-k8s-master-sec-group",
            "name_prefix": "",
            "owner_id": "130813399240",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kube-master-secgroup"
            },
            "tags_all": {
              "Name": "kube-master-secgroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ecf0af36da94267c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "petclinic-kube-worker-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:130813399240:security-group/sg-017817c8bf3fc8967",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-017817c8bf3fc8967",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              }
            ],
            "name": "petclinic-k8s-worker-sec-group",
            "name_prefix": "",
            "owner_id": "130813399240",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kube-worker-secgroup"
            },
            "tags_all": {
              "Name": "kube-worker-secgroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ecf0af36da94267c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "petclinic-mutual-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:130813399240:security-group/sg-09d900006a03522ce",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-09d900006a03522ce",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 2380
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8472,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 8472
              }
            ],
            "name": "petclinic-k8s-mutual-sec-group",
            "name_prefix": "",
            "owner_id": "130813399240",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ecf0af36da94267c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.name"
          ]
        }
      ]
    }
  ]
}